frontend/src/components/Layout/ReadLayout/Content/Content.module.scss
@import url('https://fonts.googleapis.com/css2?family=Arial:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Times+New+Roman:ital@0;1&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Courier+New&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Verdana&display=swap');
.content
{
    width: 1300px;
    background-color: black;
    background-color: white;
    border-top: 1px solid rgb(216, 220, 223);
    border-bottom: 1px solid rgb(216, 220, 223);
    display: flex;
    flex-direction: row;
    // padding: 10px 0 10px 0;
    box-shadow:0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    padding: 10px;
}
.action{
    position: fixed;
    left: 89%;
    top: 27%;
    display: flex;
    flex-direction: column;
    font-size: 20px;
}
.icon
{
    margin: 5px;
    padding: 5px;
    cursor: pointer;
    color: var(--color-button);
}
.icon:hover{
    color: var(--color-hover);

}
.icon-elements
{
    color: black;
    display: grid;
    grid-template-columns: repeat(3, 1fr); /* Tạo hai cột bằng độ rộng tự động */
    gap: 10px;
    font-size: 16px;
    :hover{
        
        color:var(--color-hover);
    }
}
.active
{
    color: var(--color-button);
}
.icon-element-context{
    display: flex;
    flex-direction: column;
    justify-content: center;
    // align-items: center;
}

